--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Fonts and color*/
 body {
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(230, 230, 230);
   color: #2e2e2e;
   font-family: 'Roboto', sans-serif;
   margin: 0px;
@@ -12,7 +12,7 @@ h1 {
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 20px;
   font-family: 'Open+Sans:600', sans-serif;
 }
 
@@ -27,14 +27,18 @@ a:hover {
 }
 
 nav {
-  background-color: rgb(230, 230, 230);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /*Custom designs (Class and IDs)*/
 
-#logo_nav {
-  height: 60px;
-  width: auto;
+.navbar-fixed-top.scrolled {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  transition: background-color 200ms linear;
+}
+
+.navbar-brand {
+  padding-left: 70px;
 }
 
 #banner {
@@ -47,7 +51,7 @@ nav {
     url("images/medico.jpg");
   background-size: cover;
   margin: 0;
-  padding: 195 0 195 0;
+  padding: 280 0 280 0;
   text-align: center;
 }
 
@@ -59,7 +63,7 @@ nav {
   color: white;
   font-size: 30px;
   font-weight: lighter;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 @media screen and (max-width:480px) {
@@ -72,13 +76,20 @@ nav {
   }
 
   #banner p {
-    color grey
+    color: grey;
   }
+}
+
+.row {
+  padding: 30px;
 }
 
 .card {
   padding: 50px;
   text-align: center;
+  height: 410px;
+  background-color: rgb(240, 240, 240);
+
 }
 
 .card h2 {
