--- a/style-old.css
+++ b/style-old.css
@@ -9,7 +9,6 @@ body {
 h1 {
   font-family: 'Open+Sans:600', sans-serif;
   font-size: 50px;
-  color: white;
 }
 
 h2 {
@@ -17,14 +16,10 @@ h2 {
   font-family: 'Open+Sans:600', sans-serif;
 }
 
-h3 {
-  font-size: 18px;
-  font-family: 'Open+Sans:600', sans-serif;
-}
-
 a {
   text-decoration: none;
   color: white;
+
 }
 
 a:hover {
@@ -32,17 +27,32 @@ a:hover {
 }
 
 nav {
-  background-color: rgba(240, 240, 240, 1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /*Custom designs (Class and IDs)*/
+
 .navbar {
-  height: 12vh;
-  padding: 0 5vw 0 5vw;
+
 }
 
-.navbar-collapse {
-  background-color: rgba(240, 240, 240, 1);
+.navbar-fixed-top.scrolled {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  transition: background-color 200ms linear;
+}
+
+.navbar-brand {
+  padding-left: 70px;
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+#banner_home {
+  background-image: url(https://via.placeholder.com/300x90.png);
+  height: 300px;
+  width: auto;
+  padding: 280 0 280 0;
+  margin: 0;
 }
 
 #banner {
@@ -55,9 +65,12 @@ nav {
     url("images/medico.jpg");
   background-size: cover;
   margin: 0;
-  padding: 20vh 5vh 20vh 5vh;
+  padding: 280 0 280 0;
   text-align: center;
-  height: 88vh;
+}
+
+#banner h1 {
+  color: white;
 }
 
 #banner p {
@@ -70,7 +83,6 @@ nav {
 @media screen and (max-width:480px) {
   #banner {
     background-image: none;
-    padding: 15vh 0 10vh 0;
   }
 
   #banner h1 {
@@ -84,25 +96,12 @@ nav {
 
 .row {
   padding: 30px;
-  background-color: rgb(240, 240, 240);
-}
-
-.titulos-cards {
-   justify-content: center;
-   color: #2E5EAA;
-   padding-top: 5vh;
-   padding-bottom: 0;
-}
-
-.titulos-cards h2 {
-  font-weight: bolder;
-  font-size: 1.5em;
 }
 
 .card {
-  padding: 2.5vh;
+  padding: 50px;
   text-align: center;
-  height: 35vh;
+  height: 410px;
   background-color: rgb(240, 240, 240);
   border-style: none;
 
